Refector: React router 리펙토링
Router 컴포넌트, PageLayout 컴포넌트 생성 및 분리

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     }
   },
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "react/jsx-uses-vars": "error"
   },
   "ignorePatterns": ["*.config.js"]
