--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.16.0",
+    "@emotion/babel-plugin": "^11.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,16 +42,17 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.16.0",
-    "@emotion/babel-plugin": "^11.1.2",
+    "customize-cra": "^1.0.0",
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "typescript": "^4.9.5",
     "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.1",
     "react-app-rewired": "^2.2.1",
-    "customize-cra": "^1.0.0"
+    "typescript": "^4.9.5"
   }
 }
